--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,3 +1,6 @@
 .sidebar {
-  background-color: rgba(0, 0, 0, 0.384);
+  background-image: url("../assets/images/bg-sidebar-desktop.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: contain;
 }/*# sourceMappingURL=sidebar.css.map */
