--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: hsl(206, 94%, 87%);
+  height: 100vh;
+  width: 100vw;
 }
 
 code {
