--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,30 +3,32 @@
 
 .App {
     text-align: center;
-    height: 100vh;
-    width: 100vw;
+    height: 600px;
+    @include sm-below-screen{
+      height: 100vh;
+      width: 100vw;
+    }
+    @include sm-md-screen{
+      width: 80vw;
+    }
+    @include md-lg-screen{
+      width: 95vw;
+    }
+    @include lg-above-screen{
+      width: 960px;
+    }
     max-width: 1300px;
     padding: 1rem;
     box-sizing: border-box;
+    background-color: #fff;
+    border-radius: 1rem;
     *{
         box-sizing: border-box;
     }
     @include flexbox('', '', center);
-    & :first-child{
-      flex: 2;
-    }
-    & :last-child{
-      flex: 4;
-    }
     @include md-below-screen{
       padding: 0;
       flex-direction: column;
-      & :first-child{
-        flex: 2;
-      }
-      & :last-child{
-        flex: 5;
-      }
     }
 }
   
