--- a/src/styles/sidebar.scss
+++ b/src/styles/sidebar.scss
@@ -1,6 +1,47 @@
+@import 'flexbox';
+@import 'breakpoints'; 
+
 .sidebar{
+    img{
+        width: auto;
+        height: 100%;
+        visibility: hidden;
+    }
+    color: #fff;
     background-image: url('../assets/images/bg-sidebar-desktop.svg');
     background-position: center;
-    background-repeat: no-repeat;
     background-size: contain;
+    position: relative;
+    .sidebarContainer{
+        background-color: rgba(0, 0, 0, 0.185);
+        height: 100%;
+        width: 100%;
+        position: absolute;
+        @include flexbox(column, center, flex-start);
+    }
+    .sidebarItem{
+        height: 50px;
+        width: 75%;
+        @include flexbox('', center, flex-start);
+
+        .sidebarBullet{
+            border: 1px solid #fff;
+            border-radius: 50%;
+            height: 30px;
+            width: 30px;
+            @include flexbox('', center, center);
+            margin: 0 0.5rem; 
+        }
+        .sidebarTexts{
+            @include flexbox(column, flex-start, center);
+            .sidebarText1{
+                font-size: 0.8rem;
+                font-weight: lighter;
+                opacity: 0.8;
+            }
+            .sidebarText2{
+                font-weight: bold;
+            }
+        }
+    }
 }
