--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,6 +2,7 @@
   text-align: center;
   height: 600px;
   background-color: #fff;
+  box-shadow: 0px 5px 10px 1px rgb(173, 173, 173);
   max-width: 1300px;
   padding: 1rem;
   box-sizing: border-box;
