--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -5,6 +5,9 @@
     text-align: center;
     height: 600px;
     background-color: #fff;
+    -webkit-box-shadow: 0px 5px 10px 1px rgba(173,173,173,1);
+    -moz-box-shadow: 0px 5px 10px 1px rgba(173,173,173,1);
+    box-shadow: 0px 5px 10px 1px rgba(173,173,173,1);
     @include md-below-screen{
       height: 100vh;
       width: 100vw;
