--- a/src/styles/appBody.css
+++ b/src/styles/appBody.css
@@ -7,11 +7,34 @@
 }
 .appBody .formBody {
   height: 100%;
+  box-sizing: border-box;
   margin-top: 2rem;
 }
 @media only screen and (min-width: 720px) and (max-width: 840px) {
   .appBody .formBody {
     max-width: 80%;
+  }
+}
+@media only screen and (max-width: 720px) {
+  .appBody .formBody {
+    background-color: #fff;
+    border-radius: 1rem;
+    position: absolute;
+    height: auto;
+    width: 80%;
+    padding: 2rem;
+    box-shadow: 0px 5px 10px 1px rgb(173, 173, 173);
+  }
+}
+@media only screen and (min-width: 480px) and (max-width: 720px) {
+  .appBody .formBody {
+    top: 100px;
+  }
+}
+@media only screen and (max-width: 480px) {
+  .appBody .formBody {
+    width: 90%;
+    top: 75px;
   }
 }
 .appBody .formBody .stepHead {
