--- a/src/styles/appBody.scss
+++ b/src/styles/appBody.scss
@@ -8,11 +8,30 @@
 
     .formBody{
         height: 100%;
+        box-sizing: border-box;
         @media only screen and (min-width: 720px) and (max-width: 840px){
             // background-color: rgba(255, 0, 0, 0.411);
             max-width: 80%;
         }
         margin-top: 2rem;
+        @include md-below-screen{
+            background-color: #fff;
+            border-radius: 1rem;
+            position: absolute;
+            height: auto;
+            width: 80%;
+            padding: 2rem;
+            -webkit-box-shadow: 0px 5px 10px 1px rgba(173,173,173,1);
+            -moz-box-shadow: 0px 5px 10px 1px rgba(173,173,173,1);
+            box-shadow: 0px 5px 10px 1px rgba(173,173,173,1);
+        }
+        @include sm-md-screen{
+            top: 100px;
+        }
+        @include sm-below-screen{
+            width: 90%;
+            top: 75px;
+        }
         .stepHead{
             @include flexbox(column, flex-start, center);
             margin-bottom: 1rem;
