created step2 squares for below large screen

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -45,4 +45,10 @@
   color: white;
 }
 
+.selected{
+  background-color: hsl(206, 94%, 87%);
+  border-color: hsl(206, 94%, 87%);
+  color: hsl(213, 96%, 18%);
+}
+
   
