--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -49,4 +49,10 @@
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
+}
+
+.selected {
+  background-color: hsl(206deg, 94%, 87%);
+  border-color: hsl(206deg, 94%, 87%);
+  color: hsl(213deg, 96%, 18%);
 }/*# sourceMappingURL=App.css.map */
