--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -49,7 +49,7 @@
   font-weight: bold;
 }
 
-.sidebarBullet, .selected {
+.sidebarBullet {
   border-radius: 50%;
   height: 30px;
   width: 30px;
@@ -62,12 +62,6 @@
 
 .sidebarBullet {
   border: 2px solid rgba(255, 255, 255, 0.6039215686);
-}
-
-.selected {
-  background-color: hsl(206deg, 94%, 87%);
-  border-color: hsl(206deg, 94%, 87%);
-  color: hsl(213deg, 96%, 18%);
 }
 
 .topbar {
