--- a/src/styles/appBody.css
+++ b/src/styles/appBody.css
@@ -307,4 +307,33 @@
 }
 .appBody .formBody .monthYearSwitch #month, .appBody .formBody .monthYearSwitch #year {
   margin: 0 1rem;
+}
+.appBody .step5 {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  margin-top: 0;
+}
+.appBody .step5 .thankYouDiv {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.appBody .step5 .thankYouDiv img {
+  margin-bottom: 1rem;
+}
+.appBody .step5 .thankYouDiv .thankYouHead {
+  margin: 1rem 0;
+  font-size: 1.5rem;
+  font-weight: 700;
+}
+.appBody .step5 .thankYouDiv .thankYouMsg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 0.5;
 }/*# sourceMappingURL=appBody.css.map */
